<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_menu_compass"
        android:title="@string/home" />
    <item
        android:id="@+id/nav_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@drawable/ic_favorite_filled"
        android:title="@string/favorites" />
    <item
        android:id="@+id/nav_ingredients"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/Myingredients" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/profile" />
</menu>
